Added 'String signal morphing/shape studies' as an appendix.

--- a/ANA-EXOT-2019-32-INT1-metadata.tex
+++ b/ANA-EXOT-2019-32-INT1-metadata.tex
@@ -42,39 +42,38 @@ two gluons.
 % Use authblk package if there are multiple authors, which is included by latex/atlascontribute
 % \usepackage{authblk}
 % Use the following 3 lines to have all institutes on one line
-\makeatletter
-\renewcommand\AB@affilsepx{, \protect\Affilfont}
-\makeatother
+%%%%\makeatletter
+%%%%\renewcommand\AB@affilsepx{, \protect\Affilfont}
+%%%%\makeatother
 % \renewcommand\Authands{, } % avoid ``. and'' for last author
 % \renewcommand\Affilfont{\itshape\small} % affiliation formatting
 % Alphabetising
 
-\AtlasAuthorContributor{Iain~Bertram}{a}{Contact, supervising Rybacki, q/g tagging optimisation of selection, statistical framework.}
-\AtlasAuthorContributor{Jyoti~Biswal}{b}{BG estimation, systematics.}
-\AtlasAuthorContributor{Shih-Chieh~Hsu}{d}{Supervising students, checking analysis flow, data MC comparison.}
-\AtlasAuthorContributor{Doug~Gingrich}{b,c}{Supervising Lyons.}
-\AtlasAuthorContributor{Jack~Lindon}{b}{ Data Fitting, Statistical Studies.}
-\AtlasAuthorContributor{Fairhurst~Lyons}{b}{BG estimation, systematics.}
-\AtlasAuthorContributor{Ben~Nachman}{e}{CP uncertainties; supervising Rybacki.}
-\AtlasAuthorContributor{Nishu~Nishu}{b}{Analysis advice.}
-\AtlasAuthorContributor{Katherine~Rybacki}{a}{q/g tagging systematics, sample production.}
-\AtlasAuthorContributor{Shu~Li}{g}{ Supervising students}
-\AtlasAuthorContributor{Wanyun~Su}{g}{Checking analysis flow, data MC comparison.}
-\AtlasAuthorContributor{Changxu~Wei}{h}{Checking analysis flow, data MC comparison.}
-\AtlasAuthorContributor{Dengfeng~Zhang}{b}{Ntuple Creation, Optimisation of Data Selection}
-\AtlasAuthorContributor{Yan~Zhou}{h}{Checking analysis flow, data MC comparison.}
+\AtlasAuthorContributor{Iain Bertram}{a}{Contact, supervising Rybacki, q/g tagging optimisation of selection, statistical framework.}
+\AtlasAuthorContributor{Jyoti Prakash Biswal}{b}{BG estimation, systematics.}
+\AtlasAuthorContributor{Doug Gingrich}{b,c}{Supervising Lyons.}
+\AtlasAuthorContributor{Shih-Chieh Hsu}{d}{Supervising students, checking analysis flow, data MC comparison.}
+\AtlasAuthorContributor{Shu Li}{e}{ Supervising students}
+\AtlasAuthorContributor{Jack Lindon}{b}{ Data Fitting, Statistical Studies.}
+\AtlasAuthorContributor{Fairhurst Lyons}{b}{BG estimation, systematics.}
+\AtlasAuthorContributor{Ben Nachman}{f}{CP uncertainties; supervising Rybacki.}
+\AtlasAuthorContributor{Nishu Nishu}{b}{Analysis advice.}
+\AtlasAuthorContributor{Katherine Rybacki}{a}{q/g tagging systematics, sample production.}
+\AtlasAuthorContributor{Wanyun Su}{e}{Checking analysis flow, data MC comparison.}
+\AtlasAuthorContributor{Changxu Wei}{g}{Checking analysis flow, data MC comparison.}
+\AtlasAuthorContributor{Dengfeng Zhang}{b}{Ntuple Creation, Optimisation of Data Selection}
+\AtlasAuthorContributor{Yan Zhou}{g}{Checking analysis flow, data MC comparison.}
 % \AtlasContributor{.}
 % \author[a]{Iain Bertram}
 % \author[a]{Second Author}
 % \author[b]{Third Author}
-\affil[a]{Lancaster}
-\affil[b]{Alberta}
-\affil[c]{TRIUMF}
-\affil[d]{Seattle Washington}
-\affil[e]{Berkeley LBNL}
-\affil[f]{Shanghai}
-\affil[g]{TDLI}
-\affil[h]{Beijing Tsinghau}
+\affil[a]{Lancaster University, United Kingdom}
+\affil[b]{University of Alberta, Canada}
+\affil[c]{TRIUMF, Canada}
+\affil[d]{University of Washington, United States of America}
+\affil[e]{Tsung-Dao Lee Institute, China}
+\affil[f]{Lawrence Berkeley National Laboratory, United States of America}
+\affil[g]{Tsinghua University, China}
 
 % If a special author list should be indicated via a link use the following code:
 % Include the two lines below if you do not use atlasstyle:
