--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -32,3 +32,9 @@
 % Global Fit Studies Vs SWiFt
 \input{include/app-GlobalFitStudies.tex}
 \clearpage
+
+
+% String signal morphing/shape studies
+\input{include/app-StrMorphShapeStudies.tex}
+\clearpage
+
