--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -32,3 +32,7 @@
 % Global Fit Studies Vs SWiFt
 \input{include/app-GlobalFitStudies.tex}
 \clearpage
+
+% Global Fit Stability Studies
+\input{include/app-GlobalFitStability.tex}
+\clearpage
