Update 06-StatisticalFramework.tex, commented out unused labels so that the pipeline passes without warnings.

--- a/include/06-StatisticalFramework.tex
+++ b/include/06-StatisticalFramework.tex
@@ -26,7 +26,7 @@ Previous searches, from ATLAS and other experiments (such as Refs.~\cite{Bagnaia
 have found that a parametric function of the form
 \begin{equation}
   f(x) = p_1 (1 - x)^{p_2} x^{p_3 + p_4\ln x + p_5 (\ln x)^2},
-\label{Eq:fitfunction}
+%\label{Eq:fitfunction}% uncomment if label used. 
 \end{equation}
 where $x \equiv \mjj /\sqrt{s}$, accurately describes dijet mass distribution predicted by leading and next-to-leading-order 
 QCD Monte Carlo. In the ATLAS Run~2 analysis with \integLumi\ of data  \cite{EXOT-2019-03,Nishu:2646455}. the four parameter 
@@ -39,5 +39,5 @@ form which is based on that used by UA2 \cite{Alitti:1990kw, Alitti:1993pn} in i
 to two jets and subsequent search
 \begin{equation}
   f(x) = p_1 x^{p_2} \exp\left({p_3 x + p_4  x^2 }\right).
-\label{Eq:fitfunction2}
+%\label{Eq:fitfunction2}% uncomment if label used. 
 \end{equation}
