Update app-GlobalFitStability.tex, comment out unused labels.

--- a/include/app-GlobalFitStability.tex
+++ b/include/app-GlobalFitStability.tex
@@ -54,19 +54,19 @@ A table showing how many injected events correspond to a BumpHunter significance
     \centering
     \includegraphics[trim={0cm 0cm 1.6cm 1cm},clip,width=1.0\linewidth]{figures/app-GlobalFitStability/injectionFitStabilityStringScale7500.pdf}
     \caption{Signal stability for a signal injection of a String sample with String Scale 7.5 TeV}
-    \label{fig:StringSignalInjectionFitStabilityStudyMs7.5TeV}
+%    \label{fig:StringSignalInjectionFitStabilityStudyMs7.5TeV} % uncomment if label used. 
 \end{figure}
 \begin{figure}
     \centering
     \includegraphics[trim={0cm 0cm 1.6cm 1cm},clip,width=1.0\linewidth]{figures/app-GlobalFitStability/injectionFitStabilityStringScale8000.pdf}
     \caption{Signal stability for a signal injection of a String sample with String Scale 8.0 TeV}
-    \label{fig:StringSignalInjectionFitStabilityStudyMs8.0TeV}
+%    \label{fig:StringSignalInjectionFitStabilityStudyMs8.0TeV} % uncomment if label used. 
 \end{figure}
 \begin{figure}
     \centering
     \includegraphics[trim={0cm 0cm 1.6cm 1cm},clip,width=1.0\linewidth]{figures/app-GlobalFitStability/injectionFitStabilityStringScale8500.pdf}
     \caption{Signal stability for a signal injection of a String sample with String Scale 8.5 TeV}
-    \label{fig:StringSignalInjectionFitStabilityStudyMs8.5TeV}
+%    \label{fig:StringSignalInjectionFitStabilityStudyMs8.5TeV} % uncomment if label used. 
 \end{figure}
 \begin{figure}
     \centering
