Update app-GlobalFitStability.tex, comment out hspace (table is positioned differently in this by default than on my local version).

--- a/include/app-GlobalFitStability.tex
+++ b/include/app-GlobalFitStability.tex
@@ -26,7 +26,7 @@ A table showing how many injected events correspond to a BumpHunter significance
 \begin{table}[]
     \tiny
     \begin{center}
-        \hspace*{-4cm}
+%        \hspace*{-4cm}
         \begin{tabular}{l|lll|lll|lll|lll|lll|}
             \toprule
             \midrule
