Update app-GlobalFitStability.tex, was missing fullstop.

--- a/include/app-GlobalFitStability.tex
+++ b/include/app-GlobalFitStability.tex
@@ -13,7 +13,7 @@ To measure the effect of signal contamination on our background fit, the followi
     \item Loop over every pseudoexperiment:
     \begin{itemize}
         \item generate new background fit (bkg$_{PE}$ from pseudoexperiment).
-        \item calculate excess events per bin by subtracting bkg$_{PE}$
+        \item calculate excess events per bin by subtracting bkg$_{PE}$.
     \end{itemize}
     \item Get average \& standard deviation of all pseudoexperiments excess events per bin.
     \item Look at bins around resonance ('around' chosen such that $\approx$50\% of the total events in the signal are considered, $\approx$ rather than exact since the bins are quite wide \& signal falls rapidly. This roughly corresponds to the region found by BumpHunter at $\approx$3$\sigma$).
