--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -33,6 +33,10 @@
 \input{include/app-GlobalFitStudies.tex}
 \clearpage
 
+% Global Fit Stability Studies
+\input{include/app-GlobalFitStability.tex}
+\clearpage
+
 
 % String signal morphing/shape studies
 \input{include/app-StrMorphShapeStudies.tex}
